# sabaipics

./: .claude  .dev.vars.example  .gitignore  .infisical.json  .neon  .prettierignore  .prettierrc  .product.json  :u  AGENTS.md  BRAND_BRIEF.md  CLAUDE.md  LANDING_PAGE_DESIGN.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PLAN.md  RECOGNITION_PLAN.md  SONY_REFINEMENT_TODOS.md  TODO.md  components.json  discovery.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.browser.json  tsconfig.json  tsconfig.node.json  tsconfig.tooling.json  tsconfig.worker.json  turbo.json  vite.admin.config.ts  vite.base.ts  vite.dashboard.config.ts  vite.desktop.config.ts  vite.event.config.ts  vitest.api.node.config.ts  vitest.api.workers.config.ts  worker-configuration.d.ts  wrangler.admin.jsonc  wrangler.api.jsonc  wrangler.dashboard.jsonc  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md
docs/: DEV_WORKFLOW.md  README.md  shadcn
findings/: 5_user_journeys.md
image-capture-core/: developer.apple.com_documentation_imagecapturecore.md  developer.apple.com_documentation_imagecapturecore_iccameradevice.md  developer.apple.com_documentation_imagecapturecore_iccameradevicedelegate.md  developer.apple.com_documentation_imagecapturecore_iccamerafile.md  developer.apple.com_documentation_imagecapturecore_iccamerafolder.md  developer.apple.com_documentation_imagecapturecore_iccameraitem.md  developer.apple.com_documentation_imagecapturecore_icdevicebrowser.md  developer.apple.com_documentation_imagecapturecore_icscannerdevice.md  developer.apple.com_documentation_imagecapturecore_icscannerdevicedelegate.md  developer.apple.com_documentation_imagecapturecore_scanner-configuration.md
image-pipeline/: README.md  pyproject.toml  test_api.py  test_api_auth.py  test_lut.py  test_parallel.py  test_parallel_auth.py  test_pipeline.py
image-pipeline/src/image_pipeline/: __init__.py  auto_edit.py  lut.py  main.py  upscale.py
infra/: README.md
infra/recognition/: .dockerignore  main.py  modal_app.py  orchestrator_app.py  pyproject.toml
ios/: 0_PLAN.md  10_entitlement_form.md  13_native_vs_expo.md  1_overview.md  6_technical_approach.md  8_discovery_protocol.md  9_ios_permissions.md  INTEGRATION_PLAN.md  MVP_PLAN.md  TESTFLIGHT_REVIEW_NOTES_TEMPLATE_STAGING.md
log/: 001-ios-studio-app.md  001-monorepo-setup.md  002-clerk-auth.md  002-stripe-integration.md  002-wifi-gphoto2-exploration.md  003-connection-flow-summary.md  003-db-package-setup.md  003-local-network-permission-precheck.md  004-gphoto2-concurrent-download-fix.md  004-multi-env-cicd.md  005-ftp-server-bootstrap.md  006-testing-setup.md  (+39 more)
src/desktop-uploader/src-tauri/: Cargo.toml  tauri.conf.json
src/desktop-uploader/src-tauri/capabilities/: default.json
src/desktop-uploader/src-tauri/migrations/: 0001_init.sql  0002_add_active.sql  0003_auth_kv.sql
src/desktop-uploader/src-tauri/src/: api.rs  http_client.rs  lib.rs  token_manager.rs
src/desktop-uploader/src-tauri/src/sync/: db.rs  engine.rs  fingerprint.rs  manager.rs  mod.rs  retry.rs  scan.rs  upload.rs  watcher.rs
(+2263 files in other folders)
