[project]
name = "recognition"
version = "0.1.0"
description = "DeepFace Recognition Service - SabaiFace API Compatible"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepface>=0.0.97",
    "fastapi>=0.128.0",
    "python-multipart>=0.0.21",
    "tf-keras>=2.20.1",
    "uvicorn>=0.40.0",
]

[project.scripts]
recognition = "main:app"

# Run commands:
# uv run uvicorn main:app --reload --port 8087  (dev)
# uv run python main.py  (start)
