[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-oauth = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "time", "fs", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
blake3 = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
notify = "7"
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp", optional = true }

[features]
debug-mcp = ["tauri-plugin-mcp"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
